Metodo eliminar productos

--- a/public/stylesheets/productDetail.css
+++ b/public/stylesheets/productDetail.css
@@ -235,7 +235,12 @@ body{
 .editar{
     
     font-size: 15px;
-   
+}
+
+.eliminar{
+    
+    font-size: 15px;
+    width: 100px;
 }
 /***FIN productos Destacados********/
 
