Agregar usuarios en vistas

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,7 +15,7 @@
     <main class="container-main">
         
             <a href="/">
-                <img src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
+                <img src="images/Logo/logo.png"  alt="Logo Playground Jugueteria"></img>
             </a>
        
         <div class="buscar-wrapper">
@@ -39,6 +39,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
             <li><a href="/products">Productos</a></li>
+            <li><a href="/users">Usuarios</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
@@ -52,17 +53,17 @@
             <div class="slides">
           
     <!-- First image --> 
-                <img class="slide" src="images/barbie-slide1.jpeg"> 
+                <img class="slide" src="images/Vistas/barbie-slide1.jpeg"> 
             </div>
         
     <!-- Second image --> 
             <div class="slides">
-                <img class="slide" src="images/spiderman-slide2.jpeg"> 
+                <img class="slide" src="images/Vistas/spiderman-slide2.jpeg"> 
             </div>
         
      <!-- Third image --> 
         <div class="slides">
-                <img class="slide" src="images/frozen-slide3.jpeg"> 
+                <img class="slide" src="images/Vistas/frozen-slide3.jpeg"> 
             </div>
             <a id="previous" class="arrow-left">&#10094</a>
             <a id="next" class="arrow">&#10095</a>
@@ -85,13 +86,13 @@
     <!--Productos Destacados-->
     <section class="destacados">
         <div class="destacados-box1">
-            <img src="images/destacado-frozen.jpeg" alt="Imagen frozen">
-            <img src="images/destacado-toyStory.jpeg" alt="Imagen toyStory">
-            <img src="images/destacado-spiderman.jpeg" alt="Imagen spiderman">
-            <img src="images/destacado-superman.jpeg" alt="Imagen superman">
-            <img src="images/destacado-starwars.jpeg" alt="Imagen star">
+            <img src="images/Products/destacado-frozen.jpeg" alt="Imagen frozen">
+            <img src="images/Products/destacado-toyStory.jpeg" alt="Imagen toyStory">
+            <img src="images/Products/destacado-spiderman.jpeg" alt="Imagen spiderman">
+            <img src="images/Products/destacado-superman.jpeg" alt="Imagen superman">
+            <img src="images/Products/destacado-starwars.jpeg" alt="Imagen star">
             <a href="/productDetail">
-                <img src="images/muneca.jpg" alt="Imagen mariobros">
+                <img src="images/Products/muneca.jpg" alt="Imagen mariobros">
             </a>
             
         </div>
