--- a/src/views/partials/slider_dinamico.ejs
+++ b/src/views/partials/slider_dinamico.ejs
@@ -2,30 +2,30 @@
     <ul>
     
     <li>
-        <img class="images_slider" src="/images/fisher-price-png.png" alt="">
-        <img class="images_slider" src="/images/Lego-logo.jpg" alt="">
-        <img class="images_slider" src="/images/play-doh-715x400.jpg" alt="">
+        <img class="images_slider" src="/images/Marcas/fisher-price-png.png" alt="">
+        <img class="images_slider" src="/images/Marcas/Lego-logo.jpg" alt="">
+        <img class="images_slider" src="/images/Marcas/play-doh-715x400.jpg" alt="">
     </li>
     
     
     <li>
-        <img class="images_slider" src="/images/Hot-Wheels-Logo.png" alt="">
-        <img class="images_slider" src="/images/Hasbro-Logo.png" alt="">
-        <img class="images_slider" src="/images/2560px-Toys__R__Us_logo.svg.png" alt="">
+        <img class="images_slider" src="/images/Marcas/Hot-Wheels-Logo.png" alt="">
+        <img class="images_slider" src="/images/Marcas/Hasbro-Logo.png" alt="">
+        <img class="images_slider" src="/images/Marcas/2560px-Toys__R__Us_logo.svg.png" alt="">
     </li>
     
     
     <li>
-        <img class="images_slider" src="/images/Mattel-Logo-1969.png" alt="">
-        <img class="images_slider" src="/images/barbie.png" alt="">
-        <img class="images_slider" src="/images/nenuco-715x400.jpg" alt="">
+        <img class="images_slider" src="/images/Marcas/Mattel-Logo-1969.png" alt="">
+        <img class="images_slider" src="/images/Marcas/barbie.png" alt="">
+        <img class="images_slider" src="/images/Marcas/nenuco-715x400.jpg" alt="">
     </li>
     
     
     <li>
-        <img class="images_slider" src="/images/Bizak_logo.svg.png" alt="">
-        <img class="images_slider" src="/images/mark.png" alt="">
-        <img class="images_slider" src="/images/a.png" alt="">
+        <img class="images_slider" src="/images/Marcas/Bizak_logo.svg.png" alt="">
+        <img class="images_slider" src="/images/Marcas/mark.png" alt="">
+        <img class="images_slider" src="/images/Marcas/a.png" alt="">
     </li>
     
     </ul>
