--- a/src/views/products/formCreate.ejs
+++ b/src/views/products/formCreate.ejs
@@ -14,7 +14,7 @@
 
     <main class="container-main">
             <a href="/">
-                <img src="/images/Design/Logo.png"  alt="Logo Playground Jugueteria"></img>
+                <img src="/images/Logo/Logo.png"  alt="Logo Playground Jugueteria"></img>
             </a>  
     </main>
 
@@ -24,6 +24,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
             <li><a href="/products">Productos</a></li>
+            <li><a href="/users">Usuarios</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
