--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -18,7 +18,7 @@
     <main class="container-main">
         
             <a href="/">
-                <img src="/images/Design/Logo.png"  alt="Logo Playground Jugueteria"></img>
+                <img src="/images/Logo/Logo.png"  alt="Logo Playground Jugueteria"></img>
             </a>
      
         <div class="buscar-wrapper">
@@ -41,13 +41,14 @@
             <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
             <li><a href="/products">Productos</a></li>
+            <li><a href="/users">Usuarios</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
     <!--Detalle de Producto seccion-->
     <div class="container-detalle">
         <div class="imagen">
-            <img class="imagenes" src="/images/<%= product.imagen %>"  alt=""></img>
+            <img class="imagenes" src="/images/Products/<%= product.imagen %>"  alt=""></img>
         </div>
             <div class="detalle">
                 <h2><%= product.titulo %></h2>
@@ -79,13 +80,13 @@
     <!--Productos Destacados-->
     <section class="destacados">
         <div class="destacados-box1">
-            <img src="/images/destacado-frozen.jpeg" alt="Imagen frozen">
-            <img src="/images/destacado-toyStory.jpeg" alt="Imagen toyStory">
-            <img src="/images/destacado-spiderman.jpeg" alt="Imagen spiderman">
-            <img src="/images/destacado-superman.jpeg" alt="Imagen superman">
-            <img src="/images/destacado-starwars.jpeg" alt="Imagen star">
+            <img src="/images/Products/destacado-frozen.jpeg" alt="Imagen frozen">
+            <img src="/images/Products/destacado-toyStory.jpeg" alt="Imagen toyStory">
+            <img src="/images/Products/destacado-spiderman.jpeg" alt="Imagen spiderman">
+            <img src="/images/Products/destacado-superman.jpeg" alt="Imagen superman">
+            <img src="/images/Products/destacado-starwars.jpeg" alt="Imagen star">
             <a href="/productDetail">
-                <img src="/images/muneca.jpg" alt="Imagen mariobros">
+                <img src="/images/Products/muneca.jpg" alt="Imagen mariobros">
             </a>
             
         </div>
