--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -13,7 +13,7 @@
 
     <main class="container-main">
             <a href="/">
-                <img src="/images/Design/Logo.png"  alt="Logo Playground Jugueteria"></img>
+                <img src="/images/Logo/Logo.png"  alt="Logo Playground Jugueteria"></img>
             </a>  
     </main>
 
@@ -21,13 +21,13 @@
     
     <div class="Marco">
         <p class="eslogan">Iniciar sesión</p>
-    <img class="imagen_login" src="/images/pexels-victoria-borodinova-1620675.jpg" alt=""> 
+    <img class="imagen_login" src="/images/Vistas/pexels-victoria-borodinova-1620675.jpg" alt=""> 
     <p class="eslogan">¡La vida es para jugar!</p>
     </div>
     
     <form action="">
 
-        <img class="usuario" src="/images/usuario.png">
+        <img class="usuario" src="/images/Vistas/usuario.png">
 <div class="formulario">
     
     <label>E-mail</label>
