--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -37,6 +37,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
             <li><a href="/products">Productos</a></li>
+            <li><a href="/users">Usuarios</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
@@ -50,7 +51,7 @@
 
     <main class="ProductoComprado">
         <div class="ProductoComprado-foto">
-            <img src="/images/muneca.jpg"  alt="images/FotoProducto1.jpg"></img></div>
+            <img src="/images/Products/muneca.jpg"  alt="images/FotoProducto1.jpg"></img></div>
 
          <div class="ProductoComprado-descripcion">
 
