--- a/src/views/users/form_admin.ejs
+++ b/src/views/users/form_admin.ejs
@@ -13,7 +13,7 @@
     <main class="container-main">
         
             <a href="/">
-                <img src="/images/Design/Logo.png"  alt="Logo Playground Jugueteria"></img>
+                <img src="/images/Logo/Logo.png"  alt="Logo Playground Jugueteria"></img>
             </a>
        
         <div class="buscar-wrapper">
@@ -37,6 +37,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
             <li><a href="/products">Productos</a></li>
+            <li><a href="/users">Usuarios</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
