Estructura de archivos con CRUD

--- a/src/views/users/usersEdit.ejs
+++ b/src/views/users/usersEdit.ejs
@@ -19,7 +19,7 @@
     </main>
 
     
-    <form action="/users" method="POST">
+    <form action="/users/edit/<%= userToEdit.id %>?_method=PATCH" method="POST">
 
 <div class="formulario">
 
