--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -19,7 +19,7 @@
     </main>
 
     
-    <form action="/users" method="POST">
+    <form action="/users" method="POST" >
 
 <div class="formulario">
 
@@ -35,6 +35,10 @@
 
     <label for="password">Contraseña</label>
     <input id="password" class="text" type="password" name="password" required>
+
+    <!-- <label for="imagenUsuario">Imagen de perfil</label>
+    <input type="file" name="imagenUsuario" id="imagenUsuario"> -->
+
 
     <!-- <label>Repetir contraseña</label>
     <input class="text" type="password" name="contraseña" required> -->
