--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -19,7 +19,7 @@
     </main>
 
     
-    <form action="/users" method="POST" >
+    <form action="/users" method="POST" enctype="multipart/form-data" >
 
 <div class="formulario">
 
@@ -36,8 +36,8 @@
     <label for="password">Contraseña</label>
     <input id="password" class="text" type="password" name="password" required>
 
-    <!-- <label for="imagenUsuario">Imagen de perfil</label>
-    <input type="file" name="imagenUsuario" id="imagenUsuario"> -->
+    <label for="imagenUsuario">Imagen de perfil</label>
+    <input type="file" name="imagenUsuario" id="imagenUsuario">
 
 
     <!-- <label>Repetir contraseña</label>
