--- a/src/views/users/usersEdit.ejs
+++ b/src/views/users/usersEdit.ejs
@@ -19,13 +19,13 @@
     </main>
 
     
-    <form action="/users/edit/<%= userToEdit.id %>?_method=PATCH" method="POST">
+    <form action="/users/edit/<%= userToEdit.id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
 
 <div class="formulario">
 
     <h2>Actualiza los datos</h2>
     <label for="first_name">Nombre</label>
-    <input id="first_name" class="text" type="text" name="first_name" required>
+    <input id="first_name" class="text" type="text" name="first_name" value=<%= userToEdit.first_name %> required>
 
     <label for="last_name">Apellido</label>
     <input id="last_name" class="text" type="text" name="last_name" required>
@@ -35,6 +35,9 @@
 
     <label for="password">Contraseña</label>
     <input id="password" class="text" type="password" name="password" required>
+
+    <label for="imagenUsuario">Imagen de perfil</label>
+    <input type="file" name="imagenUsuario" id="imagenUsuario">
 
     <!-- <label>Repetir contraseña</label>
     <input class="text" type="password" name="contraseña" required> -->
