--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -19,22 +19,48 @@
     </main>
 
     
-    <form action="/users" method="POST" enctype="multipart/form-data" >
+    <form action="/users/register" method="POST" enctype="multipart/form-data" >
 
 <div class="formulario">
 
-    <h2>Registrarse</h2>
-    <label for="first_name">Nombre</label>
-    <input id="first_name" class="text" type="text" name="first_name"  required>
+    <div>
+        <h2>Registrarse</h2>
+        <label for="first_name">Nombre</label>
+        <input id="first_name" class="text" type="text" name="first_name" >
+        <% if(locals.errors && locals.errors.first_name){ %>
+             <span> <%= errors.first_name.msg  %> </span>
+    
+             <% } %>
+    </div>
+    <br>
+    <div>
+        <label for="last_name">Apellido</label>
+    <input id="last_name" class="text" type="text" name="last_name" >
+    <% if(locals.errors && locals.errors.last_name){ %>
+        <span> <%= errors.last_name.msg  %> </span>
 
-    <label for="last_name">Apellido</label>
-    <input id="last_name" class="text" type="text" name="last_name" required>
-
-    <label for="email">E-mail</label>
-    <input id="email" class="text" type="email" name="email" required>
-
-    <label for="password">Contraseña</label>
-    <input id="password" class="text" type="password" name="password" required>
+        <% } %>
+    </div>
+    <br>
+    <div>
+        <label for="email">E-mail</label>
+        <input id="email" class="text" type="email" name="email" >
+        <% if(locals.errors && locals.errors.email){ %>
+            <span> <%= errors.email.msg  %> </span>
+    
+            <% } %>
+    </div>
+    
+    <br>
+    <div>
+        <label for="password">Contraseña</label>
+        <input id="password" class="text" type="password" name="password" >
+        <% if(locals.errors && locals.errors.password){ %>
+            <span> <%= errors.password.msg  %> </span>
+    
+            <% } %>
+    </div>
+    <br>
 
     <label for="imagenUsuario">Imagen de perfil</label>
     <input type="file" name="imagenUsuario" id="imagenUsuario">
