--- a/src/views/users/users.ejs
+++ b/src/views/users/users.ejs
@@ -50,7 +50,7 @@
     <h1 class="titulo">MI LISTA DE USUARIOS</h1>
     <br>
     <br>
-    <input class="crear" type="button" onclick="location.href='/users/create'" value="Crear nuevo usuario" >
+    <input class="crear" type="button" onclick="location.href='/users/register'" value="Crear nuevo usuario" >
 
 
 
