--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -18,6 +18,7 @@
        
     </main>
 
+    <!-- FORMULARIO -->
     
     <form action="/users/register" method="POST" enctype="multipart/form-data" >
 
@@ -73,6 +74,7 @@
     </form>
 </div>
 
+<!-- slider_dinamico -->
 
 <%- include('../partials/slider_dinamico.ejs') %>
 
