--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -41,6 +41,7 @@
             <li><a href="/products">Productos</a></li>
             <li><a href="/users">Usuarios</a></li>
             <li><a href="#contacto">Contacto</a></li>
+            <li><a href="/profile">Perfil</a></li>
         </ul>
     </nav>
 
