--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -120,7 +120,7 @@ margin-left: 30px;
 
    .text{
        border: none;
-       background-color: #2A2D43;
+       background-color: #C5C3C3;
        border-bottom: 1px solid gray;
    }
 
