--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,12 +5,28 @@
     </div>
     <!--Boton de Ingresar y Resgistro-->
     <div class="button-header">
-        <a href="/users/login">
-            <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
-        </a>
-        <a href="/users/register">
-            <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
-        </a>
+
+<% if(!locals.userLocal){ %>
+    <a href="/users/login">
+        <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
+    </a>
+    <a href="/users/register">
+        <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
+    </a>
+
+    <% } %>
+
+        
+    <% if(locals.userLocal){ %>
+
+        <form action="/users/logout" method="post">
+            <button type="submit">Cerrar sesion</button>
+            </form>
+         <p class="userLogin"><%= "Bienvenido"+" "+userLocal.first_name +" "+ userLocal.last_name  %></p>
+         
+         
+        <% } %>
+
     </div>
     </div>
 </header>
