--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,14 +35,24 @@
     <!--Menú-->
     <nav class="main-navbar">
         
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#marcas">Marcas</a></li>
-            <li><a href="/products">Productos</a></li>
-            <li><a href="/users">Usuarios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="/profile">Perfil</a></li>
-        </ul>
+
+        <% if(locals.userLocal){ %>
+
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="#marcas">Marcas</a></li>
+                <li><a href="/products">Productos</a></li>
+                <li><a href="/users">Usuarios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="/users/profile">Perfil</a></li>
+            </ul>
+
+            <% } %>
+
+
+
+
+       
     </nav>
 
 
