--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -43,6 +43,7 @@
             <li><a href="/products">Productos</a></li>
             <li><a href="/users">Usuarios</a></li>
             <li><a href="#contacto">Contacto</a></li>
+            <li><a href="/users/profile">Perfil</a></li>
         </ul>
     </nav>
     <!--Detalle de Producto seccion-->
