--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -44,6 +44,7 @@
             <li><a href="/products">Productos</a></li>
             <li><a href="/users">Usuarios</a></li>
             <li><a href="#contacto">Contacto</a></li>
+            <li><a href="/users/profile">Perfil</a></li>
         </ul>
     </nav>
 
